# nd_minimalka

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Environment.cpp  Environment.h  LoopCoordsHelper.h  NDX.h  NdArrayMinimal.h  Readme.md  Threads.cpp  Threads.h  armcomputeUtils.cpp  armcomputeUtils.h  armcompute_main.cpp  armcompute_new.cpp  beamsearch (2).cpp  beamsearch.cpp  beamsearch_drafts.cpp  common.h  ctc_loss.cpp  heap.cpp  main.cpp  new_additions.cpp  original.cpp  reference.cpp  rnn.csv  user_codes.cpp  user_codes.h  user_codes2.cpp  user_codes3.cpp  user_codes4.cpp  user_codes5.cpp  user_codes6.cpp  utils.h  vednn.patch  vednn_new.cpp
cmake/: FindARMCOMPUTE.cmake
